Added Rift compatible rendering
-Supports all 3D + 2D elements except the crosshairs
-Does not support head tracking
-Adds a handful of cvars
-Added support for GL_ARB_program_objects

--- a/game/lazarus.vcxproj
+++ b/game/lazarus.vcxproj
@@ -13,6 +13,7 @@
   <PropertyGroup Label="Globals">
     <SccProjectName />
     <SccLocalPath />
+    <ProjectGuid>{09E58C1F-353D-58C5-DE43-60F70BB966AE}</ProjectGuid>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
