Added configuration menus -VR options are under Options->Virtual Reality

--- a/quake2.vcxproj
+++ b/quake2.vcxproj
@@ -136,6 +136,9 @@
   <ItemGroup>
     <ClCompile Include="renderer\r_fbo.c" />
     <ClCompile Include="renderer\r_vr.c" />
+    <ClCompile Include="ui\ui_options_vr.c" />
+    <ClCompile Include="ui\ui_options_vr_advanced.c" />
+    <ClCompile Include="ui\ui_options_vr_ovr.c" />
     <ClCompile Include="vr\vr_main.c" />
     <ClCompile Include="vr\vr_libovr.cpp" />
     <ClCompile Include="vr\vr_ovr.c" />
