Backwards compatibility improvements
-Moved to GL_EXT_framebuffer_objects and GL_EXT_packed_depth_stencil
instead of GL_ARB_framebuffer_object for compatibility with OpenGL 2.0
hardware
-Update build configuration to use Xinput 1.3 when available to support
Windows XP
-Restore Windows XP support
-Remove some more pre-Windows XP code

--- a/quake2.vcxproj
+++ b/quake2.vcxproj
@@ -48,6 +48,8 @@
     <IntDir>$(SolutionDir)build\$(ProjectName)\$(Configuration)\</IntDir>
     <LinkIncremental>true</LinkIncremental>
     <TargetName>kmquake2</TargetName>
+    <IncludePath>$(DXSDK_DIR)include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(DXSDK_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
