Shader fixes & improvements
-Spun off GL_ARB_shaderobjects interactions to r_shaderobjects.c
-Moved OVR specific shader functions into vr_ovr.c
-Added bicubic filtering distortion shaders for the Rift -
vr_ovr_bicubic
-Added 2x supersampling support for VR render path - vr_supersampling
-Fixed a bug in libovr.cpp

--- a/quake2.vcxproj
+++ b/quake2.vcxproj
@@ -137,6 +137,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="renderer\r_fbo.c" />
+    <ClCompile Include="renderer\r_shaderobjects.c" />
     <ClCompile Include="renderer\r_vr.c" />
     <ClCompile Include="ui\ui_options_vr.c" />
     <ClCompile Include="ui\ui_options_vr_advanced.c" />
