Pre Version 1.3 fixes - Fix for projection shadows - Fix player model rendering incorrectly on player setup menu - Fix compiler warnings & bad style - Set antialiasing to default off - Revert product names - Removed Alpha and Sparc related code

--- a/win32/q2.rc
+++ b/win32/q2.rc
@@ -73,14 +73,14 @@ BEGIN
         BEGIN
             VALUE "Comments", "Licensed under the GPL.  Source available at kmq2.quakedev.com\0"
             VALUE "CompanyName", " \0"
-            VALUE "FileDescription", "Quake II VR engine mod\0"
+            VALUE "FileDescription", "KMQuake2 engine mod\0"
             VALUE "FileVersion", "0, 2, 0, 5\0"
             VALUE "InternalName", "kmquake2\0"
             VALUE "LegalCopyright", "\0"
             VALUE "LegalTrademarks", "\0"
             VALUE "OriginalFilename", "kmquake2.exe\0"
             VALUE "PrivateBuild", "\0"
-            VALUE "ProductName", "Quake II VR\0"
+            VALUE "ProductName", "KMQuake2\0"
             VALUE "ProductVersion", "0, 2, 0, 5\0"
             VALUE "SpecialBuild", "\0"
         END
