Long-overdue renaming of executable and game dll
-game dll is now vrgamex86.dll
-executable is now quake2vr.exe
-executable will fall back to trying to read kmq2gamex86.dll if it
cannot find vrgamex86.dll

--- a/game/lazarus.vcxproj
+++ b/game/lazarus.vcxproj
@@ -41,13 +41,13 @@
     <IntDir>$(SolutionDir)build\$(ProjectName)\$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
-    <TargetName>kmq2gamex86</TargetName>
+    <TargetName>vrgamex86</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)build\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)build\$(ProjectName)\$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
-    <TargetName>kmq2gamex86</TargetName>
+    <TargetName>vrgamex86</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
