--- a/win32/q2.rc
+++ b/win32/q2.rc
@@ -55,8 +55,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,2,0,6
- PRODUCTVERSION 0,2,0,6
+ FILEVERSION 1,4,0
+ PRODUCTVERSION 1,4,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -71,17 +71,17 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "Comments", "Licensed under the GPL.  Source available at www.markshan.com/knightmare\0"
+            VALUE "Comments", "Licensed under the GPL.  Source available at http://github.com/dghost/quake2vr\0"
             VALUE "CompanyName", " \0"
-            VALUE "FileDescription", "KMQuake2 engine mod\0"
-            VALUE "FileVersion", "0, 2, 0, 6\0"
-            VALUE "InternalName", "kmquake2\0"
+            VALUE "FileDescription", "Quake II VR engine mod\0"
+            VALUE "FileVersion", "1.4.0-pre"
+            VALUE "InternalName", "quake2vr\0"
             VALUE "LegalCopyright", "\0"
             VALUE "LegalTrademarks", "\0"
-            VALUE "OriginalFilename", "kmquake2.exe\0"
+            VALUE "OriginalFilename", "quake2vr.exe\0"
             VALUE "PrivateBuild", "\0"
-            VALUE "ProductName", "KMQuake2\0"
-            VALUE "ProductVersion", "0, 2, 0, 6\0"
+            VALUE "ProductName", "Quake II VR\0"
+            VALUE "ProductVersion", "1.4.0-pre"
             VALUE "SpecialBuild", "\0"
         END
     END
