Significant refactor of the VR render path
-Moved all OVR specific code into r_vr_ovr.c/.h
-Create abstract VR render interface to make future device support easier
-Changed how views are selected/changed
-Fixed error in r_bloom.c if malloc fails during init
-Fixed error in OVR code path with custom lens separation distances
-Moved OVR render path back to using per-view FBO's
-Fix crashing bug for GPU's without GL_ARB_framebuffer_object

--- a/quake2.vcxproj
+++ b/quake2.vcxproj
@@ -211,6 +211,7 @@
     <ClCompile Include="renderer\r_fbo.c" />
     <ClCompile Include="renderer\r_shaderobjects.c" />
     <ClCompile Include="renderer\r_vr.c" />
+    <ClCompile Include="renderer\r_vr_ovr.c" />
     <ClCompile Include="ui\ui_options_vr.c" />
     <ClCompile Include="ui\ui_options_vr_advanced.c" />
     <ClCompile Include="ui\ui_options_vr_ovr.c" />
@@ -327,6 +328,8 @@
     <ClInclude Include="client\cdaudio.h" />
     <ClInclude Include="client\cinematic.h" />
     <ClInclude Include="client\client.h" />
+    <ClInclude Include="renderer\r_vr.h" />
+    <ClInclude Include="renderer\r_vr_ovr.h" />
     <ClInclude Include="vr\vr.h" />
     <ClInclude Include="vr\vr_libovr.h" />
     <ClInclude Include="vr\vr_ovr.h" />
