--- a/quake2.vcxproj
+++ b/quake2.vcxproj
@@ -18,6 +18,7 @@
     <SccProjectName />
     <SccLocalPath />
     <ProjectGuid>{B4876AD1-5BC7-C790-1882-7C080D2DA6B7}</ProjectGuid>
+    <ProjectName>quake2vr</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
