Move antialiasing support out of VR code path -AA modes are now applied across the entire game, not only to VR modes -Deprecated vr_antialias in favor of r_antialias -Remove menus for vr_antialias -Replace non-power-of-two option in the video menu with antialiasing option

--- a/quake2.vcxproj
+++ b/quake2.vcxproj
@@ -209,6 +209,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="renderer\r_antialias.c" />
     <ClCompile Include="renderer\r_fbo.c" />
     <ClCompile Include="renderer\r_shaderobjects.c" />
     <ClCompile Include="renderer\r_vr.c" />
