--- a/quake2.vcxproj.filters
+++ b/quake2.vcxproj.filters
@@ -372,6 +372,9 @@
     <ClCompile Include="renderer\r_vr_ovr.c">
       <Filter>Source Files\renderer</Filter>
     </ClCompile>
+    <ClCompile Include="renderer\r_antialias.c">
+      <Filter>Source Files\renderer</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client\anorms.h">
